# app/Http/Requests/Neighborhood/GetNeighborhoodFareRequest.php
@@ -1,0 +1,42 @@
+<?php
+
+namespace App\Http\Requests\Neighborhood;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Support\Facades\Auth;
+
+class GetNeighborhoodFareRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return Auth::check();
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'origin' => 'required|integer|exists:neighborhoods,id',
+            'destination' => 'required|integer|exists:neighborhoods,id|different:origin',
+        ];
+    }
+    /**
+     * Get custom attributes for validator errors.
+     *
+     * @return array<string, string>
+     */
+    public function attributes(): array
+    {
+        return [
+            'origin' => 'مبدا',
+            'destination' => 'مقصد',
+        ];
+    }
+}
