# storage/api-docs/api-docs.json
@@ -2301,6 +2301,234 @@
                 ]
             }
         },
+        "/api/v1/neighborhood/fare/calculator": {
+            "get": {
+                "tags": [
+                    "Neighborhood"
+                ],
+                "summary": "Get inter-neighborhood fare",
+                "description": "Get the fare for traveling between two neighborhoods",
+                "operationId": "0e43fa7d0b0c739bac6068a9ef87e809",
+                "parameters": [
+                    {
+                        "name": "origin",
+                        "in": "query",
+                        "description": "The origin neighborhood id",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    },
+                    {
+                        "name": "destination",
+                        "in": "query",
+                        "description": "The destination neighborhood id",
+                        "required": true,
+                        "schema": {
+                            "type": "number"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Inter neighborhood fare calculated successfully"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/admin/neighborhood/fare": {
+            "post": {
+                "tags": [
+                    "Neighborhood"
+                ],
+                "summary": "Calculate inter neighborhood fare",
+                "operationId": "82ca6ffc6da48f4f1d26883ac35af1fe",
+                "requestBody": {
+                    "description": "Request body for calculating inter neighborhood fare",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/StoreNeighborhoodFareRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Inter neighborhood fare calculated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "status": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Inter Neighborhood Fare Created Successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized access",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorValidation"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorValidation"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/admin/neighborhood/fare/edit/{interNeighborhoodFare}": {
+            "put": {
+                "tags": [
+                    "Neighborhood"
+                ],
+                "summary": "Edit an inter-neighborhood fare",
+                "description": "Edit an existing inter-neighborhood fare record.",
+                "operationId": "editInterNeighborhoodFare",
+                "parameters": [
+                    {
+                        "name": "interNeighborhoodFare",
+                        "in": "path",
+                        "description": "ID of the inter-neighborhood fare to edit",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Request body for updating an inter-neighborhood fare",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "origin",
+                                    "destination",
+                                    "fare"
+                                ],
+                                "properties": {
+                                    "origin": {
+                                        "description": "The ID of the origin neighborhood",
+                                        "type": "integer"
+                                    },
+                                    "destination": {
+                                        "description": "The ID of the destination neighborhood",
+                                        "type": "integer"
+                                    },
+                                    "fare": {
+                                        "description": "The new fare for the inter-neighborhood",
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Inter-neighborhood fare updated successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Inter-neighborhood fare updated successfully"
+                                        },
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized access",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorResponse"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorValidation"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Validation Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorValidation"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Inter-neighborhood fare not found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/v1/neighborhood": {
             "get": {
                 "tags": [
@@ -4264,6 +4492,28 @@
                 },
                 "type": "object"
             },
+            "StoreNeighborhoodFareRequest": {
+                "title": "Store Neighborhood Fare Request",
+                "description": "Request body for storing a new neighborhood fare",
+                "properties": {
+                    "destination": {
+                        "description": "The ID of the destination neighborhood",
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "origin": {
+                        "description": "The ID of the origin neighborhood",
+                        "type": "integer",
+                        "example": 2
+                    },
+                    "fare": {
+                        "description": "The fare for the neighborhood IRT",
+                        "type": "integer",
+                        "example": 12000
+                    }
+                },
+                "type": "object"
+            },
             "UpdateEmployeesRequest": {
                 "title": "Update Employee Request",
                 "description": "Update Employee Request body data",
@@ -4320,6 +4570,35 @@
                         "description": "Employee's status :: 1 => active, 0 => inactive, -1 => suspended, -2 => blocked",
                         "type": "integer",
                         "example": "0"
+                    }
+                },
+                "type": "object"
+            },
+            "UpdateNeighborhoodFareRequest": {
+                "title": "Store Neighborhood Fare Request",
+                "description": "Request body for storing a new neighborhood fare",
+                "required": [
+                    "neighborhood_id",
+                    "origin",
+                    "destination",
+                    "fare"
+                ],
+                "properties": {
+                    "neighborhood_id": {
+                        "description": "The ID of the neighborhood fare to update",
+                        "type": "integer"
+                    },
+                    "origin": {
+                        "description": "The ID of the origin neighborhood",
+                        "type": "integer"
+                    },
+                    "destination": {
+                        "description": "The ID of the destination neighborhood",
+                        "type": "integer"
+                    },
+                    "fare": {
+                        "description": "The new fare for the neighborhood",
+                        "type": "integer"
                     }
                 },
                 "type": "object"
@@ -5076,6 +5355,38 @@
                     }
                 },
                 "type": "object"
+            }
+        },
+        "responses": {
+            "401": {
+                "description": "Unauthorized access",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "422": {
+                "description": "Validation Error",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/ErrorValidation"
+                        }
+                    }
+                }
+            },
+            "400": {
+                "description": "Validation Error",
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schemas/ErrorValidation"
+                        }
+                    }
+                }
             }
         },
         "securitySchemes": {
